# parallelki

./: .gitignore  README.md
sem2/: CMakeLists.txt  while_true.cpp
sem2/tmp/: CMakeLists.txt  hello_openmp.cpp
task1_sin/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
task1_sin1/: CMakeLists.txt
task2/: CMakeLists.txt  integrate.c  matrix_product.c  system_sol.cpp
task3/: CMakeLists.txt  cl_ser_app.cpp  matrix_prod.cpp  test.py
task4/: camera.py
task5/: main.py  vid.py
task6/cpu/: Makefile  equations.cpp
task6/gpu/: Makefile  equations_gpu.cpp  qwertyuiop
task7/: Makefile  equations_gpu.cpp  matrix.txt  qwertyuiop
task8/: Makefile  gpu_cub  gpu_cub.cu  qwertyuiop
